--- a/static/css/theme-elastos.css
+++ b/static/css/theme-elastos.css
@@ -116,3 +116,33 @@
 	margin-right: 10px;
 	font-size: 18px;
 }
+
+
+/* API Reference */
+.apititle {
+	background:#F0F0F0;
+	border-top: solid 1px #555;
+	border-bottom: solid 1px #555;
+	font-size:20px;
+	font-weight: bold;
+	padding:20px;
+	margin-top:40px;
+	margin-bottom:10px;
+}
+
+.apidescription {
+	margin-top:20px;	
+}
+
+.apiparams {
+	margin-top:20px;
+}
+
+.apiparams .header, .apireturns .header {
+	font-weight:bold;
+	text-transform: uppercase;
+}
+
+.apiparams .contained, .apireturns .contained {
+	margin: 10px 20px;
+}
