--- a/static/css/theme-elastos.css
+++ b/static/css/theme-elastos.css
@@ -134,15 +134,14 @@
 	margin-top:20px;	
 }
 
-.apiparams {
-	margin-top:20px;
-}
-
-.apiparams .header, .apireturns .header {
+.apiheader {
 	font-weight:bold;
 	text-transform: uppercase;
+	margin-top:20px;
+	margin-bottom:10px;
+	border-bottom: dashed 1px #EEE;
 }
 
-.apiparams .contained, .apireturns .contained {
-	margin: 10px 20px;
+.apiparams, .apireturns {
+	margin: 20px 20px;
 }
