--- a/static/css/theme-elastos.css
+++ b/static/css/theme-elastos.css
@@ -120,14 +120,24 @@
 
 /* API Reference */
 .apititle {
+	display:block !important;
 	background:#F0F0F0;
 	border-top: solid 1px #555;
 	border-bottom: solid 1px #555;
 	font-size:20px;
-	font-weight: bold;
 	padding:20px;
-	margin-top:40px;
+	margin-top:60px;
 	margin-bottom:10px;
+	font-family: "Novacento Sans Wide", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    text-align: center;
+    color: #222;
+	font-weight: 200;
+	
+}
+
+.apititle:hover {
+	animation: none;
+	text-decoration: none !important;
 }
 
 .apidescription {
