--- a/themes/learn/layouts/partials/header.html
+++ b/themes/learn/layouts/partials/header.html
@@ -41,6 +41,10 @@
     {{ partial "menu.html" . }}
         <section id="body">
         <div id="overlay"></div>
+
+        {{if isset .Params "iframedurl" }}
+        <iframe height="100%" src="{{ .Params.iframedurl }}" style="position:absolute;width:100%;height:100vh"></iframe>
+        {{else}}
         <div class="padding highlightable">
               {{if not .IsHome}}
               <div>
@@ -97,6 +101,7 @@
               {{.Title}}
             </h1>
           {{end}}
+      {{end}}  
 
         {{define "breadcrumb"}}
           {{$parent := .page.Parent }}
@@ -107,4 +112,3 @@
             {{.value|safeHTML}}
           {{end}}
         {{end}}
-
