Added work in progress banner

--- a/themes/learn/layouts/partials/menu.html
+++ b/themes/learn/layouts/partials/menu.html
@@ -1,5 +1,10 @@
 <nav id="sidebar" class="{{if $.Site.Params.showVisitedLinks }}showVisitedLinks{{end}}">
   
+  <div style="z-index: 999999999;background:rgba(255,0,0,0.6);color:white;font-weight:bold;text-align:center">
+    <i class="fas fa-exclamation-triangle"></i> Site under construction <i class="fas fa-exclamation-triangle"></i>
+  </div>
+
+
 {{ $currentNode := . }}
 
 {{ $showvisitedlinks := .Site.Params.showVisitedLinks }}
