--- a/layouts/shortcodes/modules_status.html
+++ b/layouts/shortcodes/modules_status.html
@@ -13,6 +13,11 @@
    {{ partial "module_status.html" . }}
 {{ end }} 
 
+<h2>Websites</h2>
+{{ range $.Site.Data.modules_status.websites }}
+   {{ partial "module_status.html" . }}
+{{ end }} 
+
 <h2>Services</h2>
 {{ range $.Site.Data.modules_status.services }}
    {{ partial "module_status.html" . }}
