Fixed english mistake

--- a/layouts/partials/module_status.html
+++ b/layouts/partials/module_status.html
@@ -45,7 +45,7 @@
                 </div>
                 {{ end }}
                 <div class="group">
-                    <div class="title">Incoming releases</div>
+                    <div class="title">Upcoming releases</div>
                     <table>
                         <tr>
                             {{ if $usePlatforms }}
