build/elastOS work 20%

--- a/layouts/shortcodes/heroitem.html
+++ b/layouts/shortcodes/heroitem.html
@@ -1,30 +1,50 @@
-{{ if .Params.linkBlank }}
-  <div class="col hero-item" onclick="javascript:window.open('{{ .Get "link" }}')">
-{{ else }}
-  <div class="col hero-item" onclick="javascript:window.location.href='{{ .Get "link" }}'">
+{{ if and (.Params.linkBlank) (.Params.link)}}
+  <div class="col hero-item {{ if .Params.nopad }}no-pad{{end}}" onclick="javascript:window.open('{{ .Get "link" }}')">
+{{ else if .Params.link }}
+  <div class="col hero-item {{ if .Params.nopad }}no-pad{{end}}" onclick="javascript:window.location.href='{{ .Get "link" }}'">
 {{ end }}
   {{if .Params.rightArrow }}
-  <svg
-      preserveAspectRatio="xMidYMid meet"
-      height="3em"
-      width="3em"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke="#20a8d8"
-      style="margin-top: 4px; float: right;"
-  >
-    <g>
-      <line x1="5" y1="12" x2="19" y2="12"></line>
-      <polyline points="12 5 19 12 12 19"></polyline>
-    </g>
-  </svg>
+    <svg
+        preserveAspectRatio="xMidYMid meet"
+        height="3em"
+        width="3em"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke="#20a8d8"
+        style="float: right;"
+    >
+      <g>
+        <line x1="5" y1="12" x2="19" y2="12"></line>
+        <polyline points="12 5 19 12 12 19"></polyline>
+      </g>
+    </svg>
   {{end}}
-  <h3 style="margin-top: 0;">{{ .Get "title" }}</h3>
-  <p>
+  {{if .Params.leftArrow }}
+    <svg
+        preserveAspectRatio="xMidYMid meet"
+        height="3em"
+        width="3em"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke="#20a8d8"
+        style="float: left;"
+    >
+      <g>
+        <line x1="19" y1="12" x2="5" y2="12"></line>
+        <polyline points="12 19 5 12 12 5"></polyline>
+      </g>
+    </svg>
+  {{end}}
+  <h3 style="margin-top: 0; {{if .Params.leftArrow }}text-align: right;{{end}}">{{ .Get "title" }}</h3>
+  <p style="{{if .Params.leftArrow }}text-align: right;{{end}}">
     {{ .Inner }}
   </p>
 </div>
