--- a/themes/learn/layouts/partials/menu.html
+++ b/themes/learn/layouts/partials/menu.html
@@ -1,6 +1,6 @@
 <nav id="sidebar" class="{{if $.Site.Params.showVisitedLinks }}showVisitedLinks{{end}}">
 
-  <div style="z-index: 999999999;background:rgba(255,0,0,0.6);color:white;font-weight:bold;text-align:center">
+  <div style="z-index: 999999999;background: #f86c6b; color: white; font-weight: 300; text-align: center">
     <i class="fas fa-exclamation-triangle"></i> Site under construction <i class="fas fa-exclamation-triangle"></i>
   </div>
 
