moved Discover to new Learn section

--- a/static/css/theme-elastos.css
+++ b/static/css/theme-elastos.css
@@ -64,6 +64,10 @@ ol > li {
 	margin-bottom: 24px;
 }
 
+#sidebar ul.topics > li > a {
+	color: #292929;
+}
+
 blockquote {
 	background-color: #f4fcff;
 }
