--- a/layouts/shortcodes/heroitem.html
+++ b/layouts/shortcodes/heroitem.html
@@ -39,6 +39,7 @@
   <div class="col-inner">
     {{if .Params.rightArrow }}
       <svg
+          class="hero-arrow"
           preserveAspectRatio="xMidYMid meet"
           height="3em"
           width="3em"
@@ -59,6 +60,7 @@
     {{end}}
     {{if .Params.leftArrow }}
       <svg
+          class="hero-arrow"
           preserveAspectRatio="xMidYMid meet"
           height="3em"
           width="3em"
