--- a/static/css/theme-elastos.css
+++ b/static/css/theme-elastos.css
@@ -13,11 +13,53 @@
 	src: url("./NotoSans-LightItalic.ttf") format("truetype");
 }
 
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 300;
+	src: url("./NotoSans-Regular.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: italic;
+	font-weight: 300;
+	src: url("./NotoSans-Italic.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 400;
+	src: url("./NotoSans-Medium.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: italic;
+	font-weight: 400;
+	src: url("./NotoSans-MediumItalic.ttf") format("truetype");
+}
+
+
+.text-normal {
+	font-weight: 300;
+}
+
+.text-medium {
+	font-weight: 400;
+}
+
+a {
+	font-weight: 300;
+}
+
 #logo img {
     width: 70%
 }
 
 body[data-url="/build/elastos/"] h1,
+body[data-url="/learn/elastos/"] h1,
 body[data-url="/resources/apis/elastos/"] h1 {
 	text-transform: none;
 	font-family: "Noto Sans", "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
