--- a/themes/learn/layouts/partials/header.html
+++ b/themes/learn/layouts/partials/header.html
@@ -84,7 +84,7 @@
                         </a>
                     </span>
                   {{ if $toc }}
-                  <span id="toc-menu"><i class="fas fa-list-alt"></i></span>
+                 <!--  <span id="toc-menu"><i class="fas fa-list-alt"></i></span> -->
                   {{ end }}
                   <span class="links">
                  {{$showBreadcrumb := (and (not .Params.disableBreadcrumb) (not .Site.Params.disableBreadcrumb))}}
