--- a/themes/learn/static/css/theme.css
+++ b/themes/learn/static/css/theme.css
@@ -120,7 +120,7 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
     /*background: #326A90;*/
     background:var(--sidebar-color);
     color: #fff;
-    text-align: center;
+    /* text-align: center; */
     /*border-bottom: 4px solid #528AB0;*/
     padding: 1rem;
 }
