Finalized rework and cleanup for now

--- a/themes/learn/layouts/partials/menu.html
+++ b/themes/learn/layouts/partials/menu.html
@@ -43,6 +43,9 @@
       <a class="menubutton elastoshome" href="https://www.elastos.org" target="_blank">
         Elastos Home
       </a>
+      <a class="menubutton elastosacademy" href="https://github.com/elastos/" target="_blank">
+        Elastos Github
+      </a>
     </div>
 
     {{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
